# ingot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  MVP_PLAN.md  Makefile  README.md  SPEC.md  manifest  qcbnogbpcjv0nret4mbltoqhujml3gpe.darc
.agent/: assigned-running-handoff-hardening.md  authoring-history-job-input-execplan.md  auto-dispatch-all-review.md  auto-dispatch-incremental-review.md  autopilot-orchestrator-extraction.md  (+43 more)
apps/ingot-daemon/: Cargo.toml
apps/ingot-daemon/src/: main.rs
crates/ingot-agent-adapters/: Cargo.toml
crates/ingot-agent-adapters/src/: claude_code.rs  codex.rs  lib.rs  registry.rs  subprocess.rs
crates/ingot-agent-adapters/tests/: launch.rs  probe.rs
crates/ingot-agent-runtime/: Cargo.toml
crates/ingot-agent-runtime/src/: autopilot.rs  bootstrap.rs  convergence.rs  dispatch.rs  execution.rs  harness.rs  job_support.rs  lib.rs  preparation.rs  reconciliation.rs  runtime_ports.rs  supervisor.rs  test_support.rs  tests.rs
crates/ingot-agent-runtime/src/dispatcher/: agent_execution.rs  artifacts.rs  completion.rs  git_ops.rs  harness_execution.rs  mod.rs  ports.rs  pre_spawn_tests.rs  prepare.rs  projected_dispatch.rs  prompt.rs  startup.rs  supervisor.rs  system_actions.rs  workspace.rs
crates/ingot-agent-runtime/tests/: auto_dispatch.rs  convergence.rs  dispatch.rs  escalation.rs  reconciliation.rs
crates/ingot-agent-runtime/tests/common/: mod.rs  shared_harness.rs
crates/ingot-agent-runtime/tests/integration/: auto_dispatch.rs  convergence.rs  dispatch.rs  escalation.rs  helpers.rs  main.rs  reconciliation.rs
crates/ingot-config/: Cargo.toml
crates/ingot-config/src/: lib.rs  loader.rs  paths.rs  schema.rs
crates/ingot-config/tests/: config.rs  paths.rs
crates/ingot-domain/: Cargo.toml
crates/ingot-domain/src/: activity.rs  agent.rs  agent_model.rs  branch_name.rs  commit_oid.rs  convergence.rs  convergence_queue.rs  events.rs  finding.rs  git_operation.rs  git_ref.rs  harness.rs  ids.rs  item.rs  job.rs  lease_owner_id.rs  lib.rs  ports.rs  project.rs  revision.rs  revision_context.rs  step_id.rs  template.rs  workspace.rs
crates/ingot-domain/src/ports/: errors.rs  git.rs  mod.rs  mutations.rs  repositories.rs  services.rs
crates/ingot-domain/src/ports/repositories/: activity.rs  convergence.rs  finding.rs  git_operation.rs  job.rs  lock.rs  mod.rs  project.rs  revision.rs  workspace.rs
crates/ingot-domain/src/test_support/: agent.rs  convergence.rs  convergence_queue_entry.rs  finding.rs  git_operation.rs  item.rs  job.rs  mod.rs  project.rs  revision.rs  timestamps.rs  workspace.rs
crates/ingot-http-api/: Cargo.toml
crates/ingot-http-api/src/: demo.rs  error.rs  lib.rs  router.rs
crates/ingot-http-api/src/demo/: catalog.rs  finance_tracker.rs  mini_crm.rs  mod.rs
crates/ingot-http-api/src/router/: agents.rs  app.rs  convergence.rs  convergence_port.rs  convergence_route_adapter.rs  core.rs  deps.rs  dispatch.rs  findings.rs  harness.rs  infra_ports.rs  item_projection.rs  items.rs  jobs.rs  mod.rs  projects.rs  support.rs  test_helpers.rs  types.rs  workspaces.rs  ws.rs
crates/ingot-http-api/src/router/items/: convergence_prep.rs  mod.rs  revisions.rs
crates/ingot-http-api/src/router/support/: activity.rs  config.rs  errors.rs  io.rs  mod.rs  normalize.rs  path.rs  project_repo.rs
crates/ingot-http-api/tests/: agent_routes.rs  convergence_routes.rs  demo_project_routes.rs  dispatch_routes.rs  finding_routes.rs  harness_routes.rs  investigation_routes.rs  item_routes.rs  job_routes.rs  project_routes.rs  workspace_routes.rs
crates/ingot-http-api/tests/common/: mod.rs
crates/ingot-store-sqlite/: Cargo.toml
crates/ingot-store-sqlite/migrations/: 0001_initial.sql  0002_finding_triage.sql  0003_convergence_queue.sql  0004_finalize_target_ref_uniqueness.sql  0005_project_execution_mode.sql  0006_item_sort_key.sql  0007_project_agent_routing.sql  0008_project_auto_triage_policy.sql  0009_investigation_workflow.sql  0010_finding_investigation_metadata.sql  0011_finalized_checkout_adoption.sql  0012_finalized_checkout_adoption_backfill_pending.sql
crates/ingot-store-sqlite/src/: db.rs  lib.rs  store.rs
crates/ingot-store-sqlite/src/store/: activity.rs  agent.rs  convergence.rs  convergence_queue.rs  finalization.rs  finding.rs  git_operation.rs  helpers.rs  invalidate_prepared_convergence.rs  item.rs  job.rs  job_completion.rs  mod.rs  project.rs  revision.rs  revision_lane_teardown.rs  test_fixtures.rs  workspace.rs
crates/ingot-store-sqlite/src/store/job/: conflict.rs  mapping.rs  mod.rs  mutations.rs  queries.rs  repository.rs  tests.rs
crates/ingot-store-sqlite/tests/: convergence.rs  finalization.rs  git_operation.rs  invalidate_prepared_convergence.rs  job.rs  job_completion.rs  revision_lane_teardown.rs  test_fixtures.rs
crates/ingot-store-sqlite/tests/common/: mod.rs
crates/ingot-test-support/: Cargo.toml
crates/ingot-test-support/src/: env.rs  git.rs  lib.rs  reports.rs  sqlite.rs
crates/ingot-test-support/src/fixtures/: agent.rs  convergence.rs  convergence_queue_entry.rs  finding.rs  git_operation.rs  item.rs  job.rs  mod.rs  project.rs  revision.rs  workspace.rs
crates/ingot-usecases/: Cargo.toml
crates/ingot-usecases/src/: authoring_history.rs  convergence.rs  dispatch.rs  error.rs  finding.rs  git_operation_journal.rs  item.rs  job.rs  job_completion.rs  job_dispatch.rs  job_lifecycle.rs  job_preparation.rs  lib.rs  locking.rs  notify.rs  reconciliation.rs  revision_context.rs  teardown.rs  ui_events.rs  workspace.rs
crates/ingot-usecases/src/convergence/: command.rs  finalization.rs  mod.rs  system_actions.rs  test_support.rs  tests.rs  types.rs
crates/ingot-usecases/src/finding/: auto_triage.rs  batch.rs  context.rs  mod.rs  report.rs  tests.rs  triage.rs
crates/ingot-workflow/: Cargo.toml
crates/ingot-workflow/src/: evaluator.rs  graph.rs  lib.rs  recommended_action.rs  step.rs
crates/ingot-workflow/src/evaluator/: investigation.rs  projection.rs  tests.rs
crates/ingot-workspace/: Cargo.toml
crates/ingot-workspace/src/: lib.rs
(+128 files in other folders)
