[package]
name = "ingot-agent-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-domain = { workspace = true }
ingot-agent-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
