[package]
name = "ingot-agent-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-domain = { workspace = true }
ingot-git = { workspace = true }
ingot-store-sqlite = { workspace = true }
ingot-usecases = { workspace = true }
ingot-workspace = { workspace = true }
ingot-agent-adapters = { workspace = true }
ingot-workflow = { workspace = true }
ingot-agent-protocol = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
ingot-domain = { workspace = true }
ingot-git = { workspace = true }
ingot-store-sqlite = { workspace = true }
ingot-test-support = { workspace = true }
ingot-usecases = { workspace = true }
ingot-workflow = { workspace = true }
ingot-agent-protocol = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }
