[package]
name = "ingot-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
chrono = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
