[package]
name = "ingot-http-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-domain = { workspace = true }
ingot-usecases = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
