[package]
name = "ingot-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-domain = { workspace = true, features = ["test-support"] }
ingot-store-sqlite = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
