[package]
name = "ingot-usecases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-agent-protocol = { workspace = true }
ingot-domain = { workspace = true }
ingot-workflow = { workspace = true }
chrono = { workspace = true }
fractional_index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ingot-test-support = { workspace = true }
