[package]
name = "ingot-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-domain = { workspace = true }
ingot-git = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
